--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "extends": "airbnb-base",
     "env": {
         "browser": true,
-        "node": false
+        "node": false,
+        "jest": true
     },
     "rules": {
         "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }]
