--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@tyx1703/watermark",
   "version": "1.0.0",
-  "main": "dist/watermark.js",
+  "description": "Watermark is a simple and quick library to draw watermark in HTML element.",
+  "main": "dist/watermark.min.js",
   "license": "MIT",
   "scripts": {
     "start": "webpack --config webpack.dev.js --watch",
@@ -15,6 +16,14 @@
     "last 2 versions",
     "not ie <= 8"
   ],
+  "keywords": [
+    "watermark"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:YanxinTang/Watermark.git"
+  },
+  "author": "tyx1703",
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
