--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "canvas": "^2.5.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.11.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "jest-canvas-mock": "^1.1.0",
+    "jest-environment-jsdom-fourteen": "^0.1.0",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2"
