--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack --config webpack.prod.js",
     "lint": "eslint src",
     "test": "jest",
-    "pre-build": "yarn lint && yarn test"
+    "prebuild": "yarn lint && yarn test",
+    "postbuild": "rm -rf docs/dist && cp -r dist docs/dist"
   },
   "browserslist": [
     "> 1%",
@@ -25,10 +26,9 @@
   },
   "author": "tyx1703",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
+    "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.6.3",
     "autoprefixer": "^9.7.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "canvas": "^2.6.0",
@@ -38,13 +38,13 @@
     "eslint-plugin-import": "^2.18.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
-    "jest-environment-jsdom-fourteen": "^0.1.0",
+    "jest-environment-jsdom-fourteen": "^1.0.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "core-js": "3.3.5"
+    "core-js": "3.6.0"
   }
 }
