chore: update build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,12 +20,23 @@ jobs:
       run: |
         yarn install
         yarn build
-      env:
-        CI: true
-    - name: code coverage
+
+  codecov:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+    - name: Generate coverage report
       run: |
-        yarn global add codecov
+        yarn install
         yarn test --coverage
-        codecov -f coverage/*.json
-      env:
-        CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        file: ./coverage/clover.xml
+        
